--- a/15-381/15-381.bib
+++ b/15-381/15-381.bib
@@ -1,5 +1,5 @@
 @article{JMLR:v17:15-381,
-  author  = {Yohann De Castro and {\'E}lisabeth Gassiat and Claire Lacour},
+  author  = {Yohann De Castro and Élisabeth Gassiat and Claire Lacour},
   title   = {Minimax Adaptive Estimation of Nonparametric Hidden Markov Models},
   journal = {Journal of Machine Learning Research},
   year    = {2016},
