--- a/14-490/14-490.bib
+++ b/14-490/14-490.bib
@@ -1,5 +1,5 @@
 @article{JMLR:v17:14-490,
-  author  = {Nicol{{\'a}}s Garc{{\'i}}a Trillos and Dejan Slep\v{c}ev and James von Brecht and Thomas Laurent and Xavier Bresson},
+  author  = {Nicolás García Trillos and Dejan Slepčev and James von Brecht and Thomas Laurent and Xavier Bresson},
   title   = {Consistency of Cheeger and Ratio Graph Cuts},
   journal = {Journal of Machine Learning Research},
   year    = {2016},
