--- a/15-047/15-047.bib
+++ b/15-047/15-047.bib
@@ -1,5 +1,5 @@
 @article{JMLR:v17:15-047,
-  author  = {Marcela Zuluaga and Andreas Krause and Markus P{{{\"u}}}schel},
+  author  = {Marcela Zuluaga and Andreas Krause and Markus Püschel},
   title   = {e-PAL: An Active Learning Approach to the Multi-Objective Optimization Problem},
   journal = {Journal of Machine Learning Research},
   year    = {2016},
