--- a/10-364/10-364.bib
+++ b/10-364/10-364.bib
@@ -1,5 +1,5 @@
 @article{JMLR:v17:10-364,
-  author  = {Alessandro Lazaric and Mohammad Ghavamzadeh and R{{\'e}}mi Munos},
+  author  = {Alessandro Lazaric and Mohammad Ghavamzadeh and Rémi Munos},
   title   = {Analysis of Classification-based Policy Iteration Algorithms},
   journal = {Journal of Machine Learning Research},
   year    = {2016},
