--- a/11-229/11-229.bib
+++ b/11-229/11-229.bib
@@ -1,5 +1,5 @@
 @article{JMLR:v17:11-229,
-  author  = {{\"U}r{{\"u}}n Do\u{g}an and Tobias Glasmachers and Christian Igel},
+  author  = {Ürün Doğan and Tobias Glasmachers and Christian Igel},
   title   = {A Unified View on Multi-class Support Vector Classification},
   journal = {Journal of Machine Learning Research},
   year    = {2016},
