--- a/14-203/14-203.bib
+++ b/14-203/14-203.bib
@@ -1,5 +1,5 @@
 @article{JMLR:v17:14-203,
-  author  = {Gundram Leifert and Tobias Strau{\ss} and Tobias Gr{{{\"u}}}ning and Welf Wustlich and Roger Labahn},
+  author  = {Gundram Leifert and Tobias Strauß and Tobias Grüning and Welf Wustlich and Roger Labahn},
   title   = {Cells in Multidimensional Recurrent Neural Networks},
   journal = {Journal of Machine Learning Research},
   year    = {2016},
