--- a/14-375/14-375.bib
+++ b/14-375/14-375.bib
@@ -1,5 +1,5 @@
 @article{JMLR:v17:14-375,
-  author  = {Daniel Hern{\'a}ndez-Lobato and Pablo Morales-Mombiela and David Lopez-Paz and Alberto Su{\'a}rez},
+  author  = {Daniel Hernández-Lobato and Pablo Morales-Mombiela and David Lopez-Paz and Alberto Suárez},
   title   = {Non-linear Causal Inference using Gaussianity Measures},
   journal = {Journal of Machine Learning Research},
   year    = {2016},
