--- a/15-140/15-140.bib
+++ b/15-140/15-140.bib
@@ -1,5 +1,5 @@
 @article{JMLR:v17:15-140,
-  author  = {Teppo Niinim\"{a}ki and Pekka Parviainen and Mikko Koivisto},
+  author  = {Teppo Niinimäki and Pekka Parviainen and Mikko Koivisto},
   title   = {Structure Discovery in Bayesian Networks by Sampling Partial Orders},
   journal = {Journal of Machine Learning Research},
   year    = {2016},
