--- a/15-616/15-616.bib
+++ b/15-616/15-616.bib
@@ -1,5 +1,5 @@
 @article{JMLR:v17:15-616,
-  author  = {Jos\'{e} Miguel Hern\'{a}ndez-Lobato and Michael A. Gelbart and Ryan P. Adams and Matthew W. Hoffman and Zoubin Ghahramani},
+  author  = {José Miguel Hernández-Lobato and Michael A. Gelbart and Ryan P. Adams and Matthew W. Hoffman and Zoubin Ghahramani},
   title   = {A General Framework for Constrained Bayesian Optimization using Information-based Search},
   journal = {Journal of Machine Learning Research},
   year    = {2016},
