--- a/13-016/13-016.bib
+++ b/13-016/13-016.bib
@@ -1,5 +1,5 @@
 @article{JMLR:v17:13-016,
-  author  = {Amir-massoud Farahmand and Mohammad Ghavamzadeh and Csaba Szepesv{{\'a}}ri and Shie Mannor},
+  author  = {Amir-massoud Farahmand and Mohammad Ghavamzadeh and Csaba Szepesvári and Shie Mannor},
   title   = {Regularized Policy Iteration with Nonparametric Function Spaces},
   journal = {Journal of Machine Learning Research},
   year    = {2016},
