--- a/14-195/14-195.bib
+++ b/14-195/14-195.bib
@@ -1,5 +1,5 @@
 @article{JMLR:v17:14-195,
-  author  = {Krikamol Muandet and Bharath Sriperumbudur and Kenji Fukumizu and Arthur Gretton and Bernhard Sch{{\"o}}lkopf},
+  author  = {Krikamol Muandet and Bharath Sriperumbudur and Kenji Fukumizu and Arthur Gretton and Bernhard Schölkopf},
   title   = {Kernel Mean Shrinkage Estimators},
   journal = {Journal of Machine Learning Research},
   year    = {2016},
